# async-file-benchmark

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
